# theseus-builder

./: .gitignore  Cargo.toml  README.md  config.limine.toml  config.std.toml  config.toml
src/: add_bootloader.rs  build_cells.rs  copy_crate_objects.rs  defaults.toml  directories.rs  discover.rs  gen_mk_config.rs  link_nano_core.rs  link_nanocore.rs  main.rs  relink_objects.rs  relink_rlibs.rs  run_qemu.rs  serialize_nano_core_syms.rs  serialize_nanocore_syms.rs  strip_objects.rs
