[package]
name = "theseus-builder"
version = "0.1.0"
edition = "2021"
authors = [
    "Kevin Boos <kevinaboos@gmail.com>",
    "Klim Tsoutsman <klim@tsoutsman.com>",
    "Nathan Royer <nathan.royer.pro@gmail.com>"
]
description = "Build and run Theseus OS"

[dependencies]
toml = "0.5.9"
pico-args = "0.5.0"
crate_metadata = { path = "../theseus/kernel/crate_metadata" }
mod_mgmt = { path = "../theseus/kernel/mod_mgmt" }
memory = { path = "../theseus/kernel/memory" }
kernel_config = { path = "../theseus/kernel/kernel_config" }
hashbrown = "0.11"
serde = { version = "1.0", features = ["derive"] }
rustc-demangle = "0.1.14"
ar = "0.9.0"

[dependencies.bincode]
version = "2.0.0-rc.1"
features = ["serde"]
