[package]
name = "theseus-builder"
version = "0.1.0"
edition = "2021"
authors = [
    "Kevin Boos <kevinaboos@gmail.com>",
    "Klim Tsoutsman <klim@tsoutsman.com>",
    "Nathan Royer <nathan.royer.pro@gmail.com>"
]
description = "Build and run Theseus OS"

[dependencies]
toml = "0.5.9"
pico-args = "0.5.0"
crate_metadata = { path = "../../kernel/crate_metadata" }
mod_mgmt = { path = "../../kernel/mod_mgmt" }
memory = { path = "../../kernel/memory" }
kernel_config = { path = "../../kernel/kernel_config" }
hashbrown = "0.11"
serde = { version = "1.0", features = ["derive"] }
rustc-demangle = "0.1.14"
ar = "0.9.0"
walkdir = "2.2.7"
rayon = "1.5.3"
lz4_flex = "0.9.3"
cpio = "0.2.2"

[dependencies.bincode]
version = "2.0.0-rc.1"
features = ["serde"]
